--- a/requirements.txt
+++ b/requirements.txt
@@ -74,3 +74,18 @@ waitress==3.0.2
 Werkzeug==3.1.3
 xxhash==3.5.0
 yarl==1.17.2
+fastmcp==0.4.1
+mcp
+anyio==4.4.0
+sniffio==1.3.0
+jsonschema==4.23.0
+referencing==0.35.1
+rpds-py==0.20.0
+jsonschema-specifications==2023.12.1
+pydantic==2.9.2
+annotated-types==0.7.0
+pydantic_core==2.23.4
+httpx==0.27.2
+httpcore==1.0.5
+h11==0.14.0
+uvicorn==0.30.6
